<resources>
    <string name="app_name">QUIZ APP</string>
    <string name="AppTitle">NorskQuiz</string>
    <string name="name_info">Please enter your name below</string>
    <string name="start_btn">Start</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="result_info">Result</string>
    <string name="congrats_info">Congratulations!</string>
    <string name="finish_btn">FINISH</string>


</resources>